# GastroBrain

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
config/: notepm_excluded_notes.yaml  notepm_managers.yaml
deploy/: notepm_sync_job.sh  run.sh  secrets.sh
docs/: ACCESS_CONTROL.md  MCP.md  NOTEPM_INGESTION.md  PRD.md  SETUP.md  SLACK_DEPLOY.md  WEB_ARCHITECTURE.md
docs/archive/: memo.md
migrations/: 002_web_chat.sql  003_user_preferences.sql  004_mcp_tokens.sql  005_oauth.sql  006_rbac.sql  007_folder_acl_perf.sql  011_notepm_acl.sql
src/gastrobrain/: access.py  ask.py  auth.py  chat.py  chunker.py  config.py  db.py  embed.py  gdrive.py  gdrive_cli.py  generate.py  ingest.py  mcp_server.py  notepm.py  notepm_acl.py  notepm_cli.py  oauth.py  pipeline.py  retrieve.py  rewrite.py  slack_app.py  slack_format.py  web_api.py
web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/src/: types.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(chat)/: layout.tsx
web/src/app/(chat)/c/[id]/: page.tsx
web/src/app/(chat)/new/: page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/mcp/tokens/: route.ts
web/src/app/api/mcp/tokens/[id]/: route.ts
web/src/app/api/messages/[id]/feedback/: route.ts
web/src/app/api/oauth/sessions/: route.ts
web/src/app/api/oauth/sessions/[id]/: route.ts
web/src/app/api/org/folder-acl/: route.ts
web/src/app/api/org/folder-acl/[id]/: route.ts
web/src/app/api/org/folders/: route.ts
web/src/app/api/org/me/: route.ts
web/src/app/api/org/me/access/: route.ts
web/src/app/api/org/members/: route.ts
web/src/app/api/org/members/[email]/: route.ts
web/src/app/api/org/roles/: route.ts
web/src/app/api/preferences/: route.ts
web/src/app/api/threads/: route.ts
web/src/app/api/threads/[id]/: route.ts
web/src/app/api/threads/[id]/title/: route.ts
web/src/app/auth/callback/: route.ts
web/src/app/auth/signout/: route.ts
web/src/app/login/: page.tsx
web/src/app/org/: page.tsx
web/src/components/: chat-shell.tsx  chat-thread.tsx  citation-chip.tsx  markdown.tsx  org-view.tsx  runtime-provider.tsx  settings-modal.tsx  thread-sidebar.tsx
web/src/lib/: api.ts  auth-guard.ts  server-api.ts  sse.ts
web/src/lib/supabase/: middleware.ts  server.ts
