[project]
name = "gastrobrain"
version = "0.2.0"
description = "Gastroduce internal knowledge Q&A — v1 over NotePM"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "anthropic>=0.40.0",
    "cohere>=5.13.0",
    "fastapi>=0.115.0",
    "mcp>=1.2.0,<2.0.0",
    "uvicorn[standard]>=0.32.0",
    "slack-sdk>=3.33.0",
    "aiohttp>=3.10.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "markdown-it-py>=3.0.0",
    "python-frontmatter>=1.1.0",
    "pymupdf4llm>=0.0.17",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "langfuse>=2.50.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "sse-starlette>=2.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.30.0",
]

[project.scripts]
gb-ingest = "gastrobrain.ingest:app"
gb-ask = "gastrobrain.ask:app"
gb-chat = "gastrobrain.chat:app"
gb-notepm-dryrun = "gastrobrain.notepm_cli:cli"
gb-notepm-ingest = "gastrobrain.notepm_cli:ingest_cli"
gb-drive-dryrun = "gastrobrain.gdrive_cli:dryrun_cli"
gb-drive-ingest = "gastrobrain.gdrive_cli:ingest_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gastrobrain"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
